Added support to build in tmpfs
Imported mq patch: changeset:   25:bc5cdf19d0cc

--- a/man/make.conf.5
+++ b/man/make.conf.5
@@ -289,6 +289,9 @@ the package compiled properly.  See \fItest\fR in \fBebuild\fR(1)
 and \fIsrc_test()\fR in \fBebuild\fR(5). This feature implies the "test"
 \fBUSE\fR flag.
 .TP
+.B tmpfsbuild
+Use tmpfs directory for \fBBUILDDIR\fR.
+.TP
 .B unmerge-orphans
 If a file is not claimed by another package in the same slot and it is not
 protected by \fICONFIG_PROTECT\fR, unmerge it even if the modification time or
