Added nopackages FEATURES: disabled filters coming from packages files
Imported mq patch: changeset:   23:09bf9895c9aa

--- a/man/make.conf.5
+++ b/man/make.conf.5
@@ -235,6 +235,9 @@ Do not install info pages.
 .B noman
 Do not install manpages.
 .TP
+.B nopackages
+Prevents using "packages" files filtering from profile (see \fBportage\fR(5))
+.TP
 .B nostrip
 Prevents the stripping of binaries that are merged to the live filesystem.
 .TP
